; ModuleID = '/home/carl/AnghaBench/i3/i3bar/src/extr_main.c_print_usage.c'
source_filename = "/home/carl/AnghaBench/i3/i3bar/src/extr_main.c_print_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [51 x i8] c"Usage: %s -b bar_id [-s sock_path] [-t] [-h] [-v]\0A\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.2 = private unnamed_addr constant [71 x i8] c"-b, --bar_id       <bar_id>\09Bar ID for which to get the configuration\0A\00", align 1
@.str.3 = private unnamed_addr constant [62 x i8] c"-s, --socket       <sock_path>\09Connect to i3 via <sock_path>\0A\00", align 1
@.str.4 = private unnamed_addr constant [54 x i8] c"-t, --transparency Enable transparency (RGBA colors)\0A\00", align 1
@.str.5 = private unnamed_addr constant [55 x i8] c"-h, --help         Display this help message and exit\0A\00", align 1
@.str.6 = private unnamed_addr constant [52 x i8] c"-v, --version      Display version number and exit\0A\00", align 1
@.str.7 = private unnamed_addr constant [40 x i8] c"-V, --verbose      Enable verbose mode\0A\00", align 1
@.str.8 = private unnamed_addr constant [176 x i8] c" PLEASE NOTE that i3bar will be automatically started by i3\0A as soon as there is a 'bar' configuration block in your\0A config file. You should never need to start it manually.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @print_usage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i8* %3)
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([71 x i8], [71 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.3, i64 0, i64 0))
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str.4, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.5, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.6, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.7, i64 0, i64 0))
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([176 x i8], [176 x i8]* @.str.8, i64 0, i64 0))
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
